fix: whitespace above footer

--- a/src/app/styles/components/Footer.module.scss
+++ b/src/app/styles/components/Footer.module.scss
@@ -13,6 +13,7 @@
 
   @include tablet {
     background-color: var(--accents-1);
+    margin-top: 0;
   }
 
   &::before {
